@@ -3,7 +3,7 @@ use warnings;
 use FFI::Platypus;
 use FFI::Platypus::Memory qw( malloc free memcpy );
 
-my $ffi = FFI::Platypus->new;
+my $ffi = FFI::Platypus->new( api => 1 );
 my $buffer = malloc 12;
 
 memcpy $buffer, $ffi->cast('string' => 'opaque', "hello there"), length "hello there\0";
